# KNNClassifier3.0

./: CMakeLists.txt  readme.md
Client/: Client.cpp  Client.hpp  ClientMain.cpp
Server/: CLI.cpp  CLI.hpp  ServerMain.cpp
Server/Classifier/: Classifier.cpp  Classifier.hpp  Flower.cpp  Flower.hpp  Item.cpp  Item.hpp  NPoints.cpp  NPoints.hpp
Server/Classifier/srcDistances/: DistanceCalc.cpp  DistanceCalc.hpp
Server/Classifier/srcDistances/distCalculators/: ChebyshevDistance.cpp  ChebyshevDistance.hpp  EuclideanDistance.cpp  EuclideanDistance.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp
Server/Commands/: ClassifyCommand.cpp  ClassifyCommand.hpp  Command.cpp  Command.hpp  ConfusionMatrixCommand.cpp  ConfusionMatrixCommand.hpp  DisplayCommand.cpp  DisplayCommand.hpp  DownloadCommand.cpp  DownloadCommand.hpp  SettingsCommand.cpp  SettingsCommand.hpp  UploadCommand.cpp  UploadCommand.hpp
Server/IOServices/: DefaultIO.cpp  DefaultIO.hpp  SocketIO.cpp  SocketIO.hpp  StandardIO.cpp  StandardIO.hpp
Server/ServerCode/: CLI.cpp  CLI.hpp  ServerProcess.cpp  ServerProcess.hpp  ThreadPool.cpp  ThreadPool.hpp
Server/toDeleteLater/: ThreadPool.cpp  WorkingThread.cpp  WorkingThread.hpp
